--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -3,13 +3,13 @@
   background: $background-primary;
   border-bottom: 1px solid $color-border;
   position: sticky;
+  z-index: 20;
   top: 0;
 
-  @include mobile {
+  @include tablet {
     width: 320px;
     height: 100vh;
     position: fixed;
-    z-index: 20;
     top: 0;
     left: -320px;
     border: 1px solid $color-border;
@@ -23,7 +23,7 @@
   &__header {
     display: none;
 
-    @include mobile {
+    @include tablet {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -47,7 +47,7 @@
     list-style-type: none;
     position: relative;
 
-    @include mobile {
+    @include tablet {
       height: 100%;
       flex-direction: column;
       align-items: flex-start;
@@ -60,7 +60,7 @@
     padding: 1.3rem 0 1.1rem;
     cursor: pointer;
 
-    @include mobile {
+    @include tablet {
       width: 100%;
       margin: 0;
       padding: 1rem 0;
@@ -108,7 +108,7 @@
       min-width: 11rem;
       cursor: default;
 
-      @include mobile {
+      @include tablet {
         position: static;
         border: none;
         padding: 1.25rem 0.5rem 0;
@@ -171,7 +171,7 @@
 .backarea {
   display: none;
 
-  @include mobile {
+  @include tablet {
     display: block;
     position: fixed;
     z-index: 15;
